HTML Structure with basic CSS
Has to be enhanced asap

--- a/index.html
+++ b/index.html
@@ -2,8 +2,53 @@
 <html>
 	<head>
 		<title>FTEdit</title>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="main.css"/>
+	
 	</head>
 	<body>
-		Main page
+		<header>
+				<h1>FTEdit</h1>
+				<div>Author : RAKOTOMANGA Andrianina, SOURSOU Adrien, DANKOU Mathis, NAZE Franck, HU Xunyue, MAMADOU Ndiaye, Cherif Amanatoulha Sy</div>
+				<img  src="resources/images/icon.svg" height="160px" width="160px"/>
+		</header>
+		<div class="cont">
+			<div class="el 1"><img src="resources/images/download.svg" height="80px" width="80px" alt="download"/></div>
+			<div class="el 2"><img  src="resources/images/info.svg" height="80px" width="80px" alt="download"/></div>
+
+		</div>
+		<section>
+				<h2>What Is FTedit</h2>
+				<p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system </p>
+				<p>With FTEdit you can create, edit, save, load, export and analyse all types of fault tree ! </p>
+		</section>
+		<section>
+				<h2>How to use FTEdit <img  src="resources/images/icon.svg" height="40px" width="40px"/></h2>
+			<section>
+				<h3>Creation and Editing of a Fault Tree <img src="resources/images/edit.svg" height="40px" width="40px" alt="edit" /></h3>
+				<p>In a Fault Tree there's several type of </p>
+			</section>
+			<section>
+				<h3>Save and Loading of a Fault Tree <img  src="resources/images/file.svg" height="40px" width="40px"/></h3>
+			</section>
+
+			<section>
+				<h3>Analyze a Fault Tree <img  src="resources/images/evaluate.svg" height="40px" width="40px"/></h3>
+			</section>
+
+		</section>
+
+
+		<footer>
+			<h2>NEED HELP?</h2>
+			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Official Manual of FTEdit">Wiki</a></h3>
+			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Add an Issue">All Release Link</a></h3>
+			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Add an Issue">Flag an Issue</a></h3>
+
+		</footer>
+		
+
+	
+    
 	</body>
 </html>
