--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<footer>
 			<h2>NEED HELP?</h2>
 			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Official Manual of FTEdit">Wiki</a></h3>
-			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Add an Issue">All Release Link</a></h3>
+			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="ALL OS Available">All Release Link</a></h3>
 			<h3><a href="https://github.com/ChuOkupai/FTEdit/wiki" title="Add an Issue">Flag an Issue</a></h3>
 
 		</footer>
