--- a/index.html
+++ b/index.html
@@ -18,18 +18,21 @@
 
 		</div>
 		<section>
-				<h2>What Is FTedit</h2>
-				<p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system </p>
-				<p>With FTEdit you can create, edit, save, load, export and analyse all types of fault tree ! </p>
+				<h2>What Is FTEdit ? <img  src="resources/images/icon.svg" height="40px" width="40px"/></h2>
+				<p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system. </p>
+				<p>With FTEdit you can create <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, edit <img src="resources/images/edit.svg" height="20px" width="20px" alt="edit" />, save <img src="resources/images/save.png" height="20px" width="20px" alt="edit" />, load <img src="resources/images/open.png" height="20px" width="20px" alt="edit" />, export <img src="resources/images/saveAs.png" height="20px" width="20px" alt="edit" /> and analyse <img src="resources/images/evaluate.svg" height="20px" width="20px" alt="edit" /> all types of fault tree ! </p>
 		</section>
 		<section>
-				<h2>How to use FTEdit <img  src="resources/images/icon.svg" height="40px" width="40px"/></h2>
+				<h2>How to use FTEdit ? <img  src="resources/images/info.svg" height="40px" width="40px"/></h2>
+				<p class="lool">In FTEdit you can create and edit a fault tree <img src="resources/images/and.png" height="20px" width="20px" alt="edit" />, adding event, gate and probabilities. When your fault tree is set and done you can analyze it buy clicking on the  <img  src="resources/images/evaluate.svg" height="20px" width="20px"/> button </p>
+
 			<section>
 				<h3>Creation and Editing of a Fault Tree <img src="resources/images/edit.svg" height="40px" width="40px" alt="edit" /></h3>
-				<p>In a Fault Tree there's several type of </p>
+				<p>In a Fault Tree there's several type of Gate : AND <img src="resources/images/and.png" height="20px" width="20px" alt="edit" />, OR <img src="resources/images/or.png" height="20px" width="20px" alt="edit" />, XOR <img src="resources/images/xor.png" height="20px" width="20px" alt="edit" />, INHIBIT <img src="resources/images/inhibit.png" height="20px" width="20px" alt="edit" />, and VotingOR <img src="resources/images/kn.png" height="20px" width="20px" alt="edit" />, you can select them directly in the tool bar</p>
+				<p>You can also link up two fault tree by using a transfer gate <img src="resources/images/transfert.png" height="20px" width="20px" alt="edit" /></p>
 			</section>
 			<section>
-				<h3>Save and Loading of a Fault Tree <img  src="resources/images/file.svg" height="40px" width="40px"/></h3>
+				<h3>Save and Loading of a Fault Tree <img  src="resources/images/save.png" height="40px" width="40px"/></h3>
 			</section>
 
 			<section>
