weird css changes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<div class="el 3"><a href="https://github.com/ChuOkupai/FTEdit/releases"><img src="resources/images/icon.svg" height="80px" width="80px" alt"all release" title="all release download"/></a></div>
 
 		</div>
-		<section>
+		<section class="main">
 				<h2>What Is FTEdit ? <img  src="resources/images/icon.svg" height="40px" width="40px"/></h2>
 				<p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system. </p>
 				<p>With FTEdit you can create <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, edit <img src="resources/images/edit.svg" height="20px" width="20px" alt="edit" />, save <img src="resources/images/save.png" height="20px" width="20px" alt="edit" />, load <img src="resources/images/open.png" height="20px" width="20px" alt="edit" />, export <img src="resources/images/saveAs.png" height="20px" width="20px" alt="edit" /> and analyse <img src="resources/images/evaluate.svg" height="20px" width="20px" alt="edit" /> all types of fault tree ! </p>
 		</section>
-		<section>
+		<section class="main">
 				<h2>How to use FTEdit ? <img  src="resources/images/info.svg" height="40px" width="40px"/></h2>
 				<p class="lool">In FTEdit you can create and edit a fault tree <img src="resources/images/new.png" height="20px" width="20px" alt="edit" />, adding event <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, gate and probabilities. When your fault tree is set and done you can analyze it buy clicking on the  <img  src="resources/images/evaluate.svg" height="20px" width="20px"/> button. </p>
 
