--- a/index.html
+++ b/index.html
@@ -10,39 +10,43 @@
 	<body>
 		<header>
 				<h1>FTEdit</h1>
-				<div>Authors : RAKOTOMANGA Andrianina, SOURSOU Adrien, DANKOU Mathis, NAZE Franck, HU Xunyue, NDIAYE Mamadou, AMANATOULHA SY Cherif</div>
+				<div>Authors : RAKOTOMANGA Andrianina, SOURSOU Adrien, DANKOU Mathis, NAZE Franck, HU Xunyue, NDIAYE Mamadou,  SY Amanatoulha Cherif</div>
 				<img  src="resources/images/icon.svg" height="160px" width="160px"/>
 		</header>
 		<div class="cont">
 			<div class="el 1"><a href="https://github.com/ChuOkupai/FTEdit/archive/v1.0.zip"><img src="resources/images/download.svg" height="80px" width="80px" alt="download" title="download source file"/></a></div>
 			<div class="el 2"><a href="info.md"><img  src="resources/images/info.svg" height="80px" width="80px" alt="compilation info" title="compilation info"/></a></div>
-			<div class="el 3"><a href="https://github.com/ChuOkupai/FTEdit/releases"><img src="resources/images/icon.svg" height="80px" width="80px" alt"all release" title="all release download"/></a></div>
+			<div class="el 3"><a href="releases.html"><img src="resources/images/icon.svg" height="80px" width="80px" alt"all release" title="all release download"/></a></div>
 
 		</div>
 		<section class="main">
 				<h2>What Is FTEdit ? <img  src="resources/images/icon.svg" height="40px" width="40px"/></h2>
-				<p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system. </p>
+				<div><p>FTedit is an open-source software of a Fault Tree editor. A Fault Tree is a representation of a technical hazard of a complex system. </p>
 				<p>With FTEdit you can create <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, edit <img src="resources/images/edit.svg" height="20px" width="20px" alt="edit" />, save <img src="resources/images/save.png" height="20px" width="20px" alt="edit" />, load <img src="resources/images/open.png" height="20px" width="20px" alt="edit" />, export <img src="resources/images/saveAs.png" height="20px" width="20px" alt="edit" /> and analyse <img src="resources/images/evaluate.svg" height="20px" width="20px" alt="edit" /> all types of fault tree ! </p>
+				</div>
 		</section>
 		<section class="main">
 				<h2>How to use FTEdit ? <img  src="resources/images/info.svg" height="40px" width="40px"/></h2>
-				<p class="lool">In FTEdit you can create and edit a fault tree <img src="resources/images/new.png" height="20px" width="20px" alt="edit" />, adding event <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, gate and probabilities. When your fault tree is set and done you can analyze it buy clicking on the  <img  src="resources/images/evaluate.svg" height="20px" width="20px"/> button. </p>
-
+				<div class="container"><p class="lool">In FTEdit you can create and edit a fault tree <img src="resources/images/new.png" height="20px" width="20px" alt="edit" />, adding event <img src="resources/images/add.png" height="20px" width="20px" alt="edit" />, gate and probabilities. When your fault tree is set and done you can analyze it buy clicking on the  <img  src="resources/images/evaluate.svg" height="20px" width="20px"/> button. </p>
+				</div>		
 			<section>
 				<h3>Creation and Editing of a Fault Tree <img src="resources/images/edit.svg" height="40px" width="40px" alt="edit" /></h3>
-				<p>In a Fault Tree there's several type of Gate : AND <img src="resources/images/and.png" height="20px" width="20px" alt="edit" />, OR <img src="resources/images/or.png" height="20px" width="20px" alt="edit" />, XOR <img src="resources/images/xor.png" height="20px" width="20px" alt="edit" />, INHIBIT <img src="resources/images/inhibit.png" height="20px" width="20px" alt="edit" />, and VotingOR <img src="resources/images/kn.png" height="20px" width="20px" alt="edit" />, you can select them directly in the tool bar.</p>
+				<div class="container"><p>In a Fault Tree there's several type of Gate : AND <img src="resources/images/and.png" height="20px" width="20px" alt="edit" />, OR <img src="resources/images/or.png" height="20px" width="20px" alt="edit" />, XOR <img src="resources/images/xor.png" height="20px" width="20px" alt="edit" />, INHIBIT <img src="resources/images/inhibit.png" height="20px" width="20px" alt="edit" />, and VotingOR <img src="resources/images/kn.png" height="20px" width="20px" alt="edit" />, you can select them directly in the tool bar.</p>
 				<p>You can also link up two fault tree by using a transfer gate <img src="resources/images/transfert.png" height="20px" width="20px" alt="edit" /></p>
+				</div>
 			</section>
 			<section>
 				<h3>Saving and Loading of a Fault Tree <img  src="resources/images/save.png" height="40px" width="40px"/></h3>
-				<p>To save a fault tree, it has to be correct, the software will automatically check if it does, if it is correct click on the <img src="resources/images/save.png" height="20px" width="20px" alt="edit" /> button to save your fault tree</p>
+				<div class="container"><p>To save a fault tree, it has to be correct, the software will automatically check if it does, if it is correct click on the <img src="resources/images/save.png" height="20px" width="20px" alt="edit" /> button to save your fault tree</p>
 				<p>If you want to load or open an existing project of a fault tree your file must in .opsa or xml <img src="resources/images/xml.png" height="20px" width="20px" alt="edit" /> format. To load a project click on the <img src="resources/images/open.png" height="20px" width="20px" alt="edit" /> and select your fault tree !</p>
+				</div>
 			</section>
 
 			<section>
 				<h3>Analyze a Fault Tree <img  src="resources/images/evaluate.svg" height="40px" width="40px"/></h3>
-				<p>Once your fault tree is done and you want to get some numbers about it, the analyzer will check if the logic of the tree is valid.If not it will return errors messages to fix on the fault tree.</p>
+				<div class="container"><p>Once your fault tree is done and you want to get some numbers about it, the analyzer will check if the logic of the tree is valid.If not it will return errors messages to fix on the fault tree.</p>
 				<p>To lunch fault tree computing, click on the <img src="resources/images/evaluate.svg" height="20px" width="20px" alt="edit" /> button and choose your type of evaluation. You can choose both quantitative and qualitative computing. Result will be displayed in the explorer of the application (at the left bar)</p>
+				</div>
 			</section>
 
 		</section>
