--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="cont">
 			<div class="el 1"><a href="https://github.com/ChuOkupai/FTEdit/archive/v1.0.zip"><img src="resources/images/download.svg" height="80px" width="80px" alt="download" title="download source file"/></a></div>
 			<div class="el 2"><a href="info.md"><img  src="resources/images/info.svg" height="80px" width="80px" alt="compilation info" title="compilation info"/></a></div>
-			<div class="el 3"><a href="releases.html"><img src="resources/images/icon.svg" height="80px" width="80px" alt"all release" title="all release download"/></a></div>
+			<div class="el 3"><a href="https://github.com/ChuOkupai/FTEdit/releases"><img src="resources/images/icon.svg" height="80px" width="80px" alt"all release" title="all release download"/></a></div>
 
 		</div>
 		<section class="main">
